--- a/css/xyc.css
+++ b/css/xyc.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2015-12-05 21:48:40
 * @Last Modified by:   流年
-* @Last Modified time: 2016-03-29 16:47:30
+* @Last Modified time: 2016-03-30 01:00:32
 */
 
 body {
@@ -14,7 +14,7 @@ body {
  * Bootstrap 扩展
  */
 
-.navbar-itcast {
+.navbar-lm {
   background-color: #fff;
   border-bottom-color: #f0f0f0;
   margin-bottom: 0;
@@ -23,34 +23,44 @@ body {
   top: 0;
 }
 
-.navbar-itcast .navbar-brand {
-  height: 70px;
+.navbar-lm .navbar-brand {
+  height: 82px;
   padding: 10px 15px;
 }
-
-.navbar-itcast .navbar-brand:hover,
-.navbar-itcast .navbar-brand:focus {
+.navbar-lm .navbar-brand img{
+  margin: -12px 60px 0 20px;
+}
+/*.navbar-lm .navbar-brand:hover,
+.navbar-lm .navbar-brand:focus {
   color: #5e5e5e;
   /*background-color: transparent;*/
-}
+}*/
 
-.navbar-itcast .navbar-text {
+.navbar-lm .navbar-text {
   color: #777;
 }
 
-.navbar-itcast .navbar-nav > li > a {
+.navbar-lm .navbar-nav > li > a {
   color: #878787;
   font-size: 1.6rem;
-  line-height: 38px;
+  line-height: 45px;
+}
+ .top-newh{
+  display: inline-block;
+  width: 9px;
+  height: 13px;
+  background-image: url(../images/xinnew.gif);
+  position: absolute;
+  top: 1px;
+  right: 112px;
 }
 
-
 /*@media screen and (min-width: 992px) {
-  .navbar-itcast .navbar-nav > li > a {
+  .navbar-lm .navbar-nav > li > a {
     font-size: 1.6rem;
   }
 }*/
-.navbar-itcast .navbar-nav .nav-demo{
+.navbar-lm .navbar-nav .nav-demo{
   display: inline-block;
   height: 32px;
   line-height: 32px;
@@ -61,36 +71,36 @@ body {
   background-color: #86D0B5;
 }
 
-.navbar-itcast .navbar-nav > li i{
+.navbar-lm .navbar-nav > li i{
   display: inline-block;
   position: absolute;
-  top: 27px;
+  top: 32px;
   width: 1px;
   height: 12px;
   background-color: #ccc;
 }
 
-.navbar-itcast .navbar-nav > li > a:hover,
-.navbar-itcast .navbar-nav > li > a:focus{
+.navbar-lm .navbar-nav > li > a:hover,
+.navbar-lm .navbar-nav > li > a:focus{
   color: #424242;
   /*background-color: #86D0B5;*/
 }
 
-/*.navbar-itcast .navbar-nav > .active > a,
-.navbar-itcast .navbar-nav > .active > a:hover,
-.navbar-itcast .navbar-nav > .active > a:focus{
+/*.navbar-lm .navbar-nav > .active > a,
+.navbar-lm .navbar-nav > .active > a:hover,
+.navbar-lm .navbar-nav > .active > a:focus{
   color: #424242;
   background-color: #86D0B5;
 }*/
 
-.navbar-itcast .navbar-nav > .disabled > a,
-.navbar-itcast .navbar-nav > .disabled > a:hover,
-.navbar-itcast .navbar-nav > .disabled > a:focus {
+.navbar-lm .navbar-nav > .disabled > a,
+.navbar-lm .navbar-nav > .disabled > a:hover,
+.navbar-lm .navbar-nav > .disabled > a:focus {
   color: #ccc;
   background-color: transparent;
 }
 
-.navbar-itcast .navbar-toggle {
+.navbar-lm .navbar-toggle {
   border-color: #ddd;
   margin-top: 18px;
   margin-bottom: 18px;
@@ -102,71 +112,71 @@ body {
 #home_slide .carousel-indicators .active{
   background-color: #86D0B5;
 }
-.navbar-itcast .navbar-toggle:hover,
-.navbar-itcast .navbar-toggle:focus {
+.navbar-lm .navbar-toggle:hover,
+.navbar-lm .navbar-toggle:focus {
   background-color: #ddd;
 }
 
-.navbar-itcast .navbar-toggle .icon-bar {
+.navbar-lm .navbar-toggle .icon-bar {
   background-color: #888;
 }
 
-.navbar-itcast .navbar-collapse,
-.navbar-itcast .navbar-form {
+.navbar-lm .navbar-collapse,
+.navbar-lm .navbar-form {
   border-color: #e7e7e7;
 }
 
-.navbar-itcast .navbar-nav > .open > a,
-.navbar-itcast .navbar-nav > .open > a:hover,
-.navbar-itcast .navbar-nav > .open > a:focus {
+.navbar-lm .navbar-nav > .open > a,
+.navbar-lm .navbar-nav > .open > a:hover,
+.navbar-lm .navbar-nav > .open > a:focus {
   color: #555;
   background-color: #e7e7e7;
 }
 
 @media (max-width: 767px) {
-  .navbar-itcast .navbar-nav .open .dropdown-menu > li > a {
+  .navbar-lm .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
   }
-  .navbar-itcast .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-itcast .navbar-nav .open .dropdown-menu > li > a:focus {
+  .navbar-lm .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-lm .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #333;
     background-color: transparent;
   }
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .active > a:focus {
+  .navbar-lm .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-lm .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-lm .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555;
     background-color: #e7e7e7;
   }
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .disabled > a,
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-  .navbar-itcast .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+  .navbar-lm .navbar-nav .open .dropdown-menu > .disabled > a,
+  .navbar-lm .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-lm .navbar-nav .open .dropdown-menu > .disabled > a:focus {
     color: #ccc;
     background-color: transparent;
   }
 }
 
-.navbar-itcast .navbar-link {
+.navbar-lm .navbar-link {
   color: #777;
 }
 
-.navbar-itcast .navbar-link:hover {
+.navbar-lm .navbar-link:hover {
   color: #333;
 }
 
-.navbar-itcast .btn-link {
+.navbar-lm .btn-link {
   color: #777;
 }
 
-.navbar-itcast .btn-link:hover,
-.navbar-itcast .btn-link:focus {
+.navbar-lm .btn-link:hover,
+.navbar-lm .btn-link:focus {
   color: #333;
 }
 
-.navbar-itcast .btn-link[disabled]:hover,
-fieldset[disabled] .navbar-itcast .btn-link:hover,
-.navbar-itcast .btn-link[disabled]:focus,
-fieldset[disabled] .navbar-itcast .btn-link:focus {
+.navbar-lm .btn-link[disabled]:hover,
+fieldset[disabled] .navbar-lm .btn-link:hover,
+.navbar-lm .btn-link[disabled]:focus,
+fieldset[disabled] .navbar-lm .btn-link:focus {
   color: #ccc;
 }
 
@@ -221,7 +231,7 @@ fieldset[disabled] .btn-register.active {
  * 字体图标
  */
 
-@font-face {
+/*/*@font-face {
   font-family: 'weijinsuo';
   src: url('../fonts/MiFie-Web-Font.eot?6cyhth');
   src: url('../fonts/MiFie-Web-Font.eot?6cyhth#iefix') format('embedded-opentype'), url('../fonts/MiFie-Web-Font.svg?6cyhth#MiFie-Web-Font') format('svg'), url('../fonts/MiFie-Web-Font.ttf?6cyhth') format('truetype'), url('../fonts/MiFie-Web-Font.woff?6cyhth') format('woff');
@@ -231,8 +241,8 @@ fieldset[disabled] .btn-register.active {
 
 [class^="icon-"],
 [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'weijinsuo' !important;
+/*  /* use !important to prevent issues with browser extensions that change fonts */
+ /* font-family: 'weijinsuo' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -240,11 +250,11 @@ fieldset[disabled] .btn-register.active {
   text-transform: none;
   line-height: 1;
   /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
+  /*-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+}*/
 
-.icon-icon {
+/*.icon-icon {
   color: #E9232C;
   display: inline-block;
   font-size: 50px;
@@ -332,8 +342,7 @@ fieldset[disabled] .btn-register.active {
   content: "\e911";
   font-size: 28px;
   color: #EAEAEA;
-}
-
+}*/
 
 /**
  * 通栏样式
@@ -342,6 +351,8 @@ fieldset[disabled] .btn-register.active {
 .topbar {
   border-bottom: 1px solid #e0e0e0;
   line-height: 40px;
+  position: relative;
+  z-index: 10;
 }
 
 .topbar {
@@ -372,6 +383,21 @@ fieldset[disabled] .btn-register.active {
   left: 0;
 }
 
+.top-wx{
+  cursor: pointer;
+}
+
+.top-wx .top-wximg{
+  display: none;
+}
+
+.top-wx:hover .top-wximg{
+  position: absolute;
+  top: 30px;
+  z-index: 10;
+  display: block;
+}
+
 .topbar .tb-4 > .text-muted {
   margin-left: 15px;
   font-size: 13px;
@@ -400,7 +426,7 @@ fieldset[disabled] .btn-register.active {
 
 @media screen and (min-width: 768px) {
   #home_slide .item-image {
-    height: 410px;
+    height: 340px;
   }
   #home_slide .item-image img {
     display: none;
@@ -411,37 +437,52 @@ fieldset[disabled] .btn-register.active {
 /**
  * 网站特色模块
  */
-
+ul li {
+  list-style: none;
+}
+i {
+  font-style: normal;
+}
 #features {
   background-color: #fff;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #e0e0e0;
+  /*padding-top: 40px;*/
+  height: 140px;
+  border-bottom: 1px dashed #e0e0e0;
 }
 
-#features a {
-  color: #333;
-  text-decoration: none;
+#features .bgi span {
+  margin-top: 10px;
+  display: inline-block;
+  width: 184px;
+  height: 84px;
+  background-image: url(../images/intxt_icon.gif);
 }
 
-#features a:hover {
-  color: #E9232C;
+#features .inleft li {
+  float: left;
+  margin-right: 10px;
+  text-align: center;
+}
+#features .bgsp1 {
+  color: #fe8f01;
+  font-size: 16px;
+}
+#features .bgi2 span {
+  background-position: -191px 0px;
+}
+#features .bgsp2 {
+   padding-right: 15px;
+    color: #5ebb99;
+   font-size: 16px;
 }
 
-#features .media {
-  padding: 10px 0;
+#features .bgi3 span {
+  background-position: -382px 0px;
 }
-
-#features a i {
-  display: block;
-  font-size: 30px;
-  padding: 10px 0;
+#features .bgsp3 {
+    color: #6b96c3;
+    font-size: 16px;
 }
-
-#features a .media-body {
-  padding: 5px 0;
-}
-
 
 /**
  * 预约
@@ -533,50 +574,12 @@ fieldset[disabled] .btn-register.active {
   position: relative;
 }
 
-.panel-product.active::before {
-  content: "\e915";
-  position: absolute;
-  font-family: weijinsuo;
-  color: #fff;
-  font-size: 33px;
-  font-weight: 100;
-  top: -8px;
-  left: -1px;
-}
 
 .panel-product.state-1,
 .panel-product.state-2,
 .panel-product.state-3,
 .panel-product.state-4 {
   background-color: #e0e0e0;
-}
-
-.panel-product.state-1::after,
-.panel-product.state-2::after,
-.panel-product.state-3::after,
-.panel-product.state-4::after {
-  font-family: weijinsuo;
-  font-size: 100px;
-  color: #e9232c;
-  position: absolute;
-  top: 10px;
-  right: 130px;
-}
-
-.panel-product.state-1::after {
-  content: "\e925";
-}
-
-.panel-product.state-2::after {
-  content: "\e926";
-}
-
-.panel-product.state-3::after {
-  content: "\e927";
-}
-
-.panel-product.state-4::after {
-  content: "\e928";
 }
 
 .panel-product .panel-heading {
@@ -791,76 +794,4 @@ fieldset[disabled] .btn-register.active {
 
 .partner-list > li > a:hover {
   text-decoration: none;
-}
-
-.icon-uniE930:hover {
-  color: #df3232;
-}
-
-.icon-uniE930:before {
-  content: "\e946";
-}
-
-.icon-uniE92F:hover {
-  color: #e8380d;
-}
-
-.icon-uniE92F:before {
-  content: "\e92f";
-}
-
-.icon-uniE92E:hover {
-  color: #ed6f00;
-}
-
-.icon-uniE92E:before {
-  content: "\e92e";
-}
-
-.icon-uniE92A:hover {
-  color: #159f69;
-}
-
-.icon-uniE92A:before {
-  content: "\e92a";
-}
-
-.icon-uniE929:hover {
-  color: #07569e;
-}
-
-.icon-uniE929:before {
-  content: "\e929";
-}
-
-.icon-uniE931:hover {
-  color: #004098;
-}
-
-.icon-uniE931:before {
-  content: "\e931";
-}
-
-.icon-uniE92C:hover {
-  color: #d32019;
-}
-
-.icon-uniE92C:before {
-  content: "\e92c";
-}
-
-.icon-uniE92B:hover {
-  color: #3eac4a;
-}
-
-.icon-uniE92B:before {
-  content: "\e92b";
-}
-
-.icon-uniE92D:hover {
-  color: #2bb289;
-}
-
-.icon-uniE92D:before {
-  content: "\e92d";
 }
