--- a/css/xyc.css
+++ b/css/xyc.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2015-12-05 21:48:40
 * @Last Modified by:   流年
-* @Last Modified time: 2016-03-30 01:34:43
+* @Last Modified time: 2016-03-30 02:05:41
 */
 
 body {
@@ -226,123 +226,6 @@ fieldset[disabled] .btn-register.active {
   background-color: #FFFFFF;
 }
 
-
-/**
- * 字体图标
- */
-
-/*/*@font-face {
-  font-family: 'weijinsuo';
-  src: url('../fonts/MiFie-Web-Font.eot?6cyhth');
-  src: url('../fonts/MiFie-Web-Font.eot?6cyhth#iefix') format('embedded-opentype'), url('../fonts/MiFie-Web-Font.svg?6cyhth#MiFie-Web-Font') format('svg'), url('../fonts/MiFie-Web-Font.ttf?6cyhth') format('truetype'), url('../fonts/MiFie-Web-Font.woff?6cyhth') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"],
-[class*=" icon-"] {
-/*  /* use !important to prevent issues with browser extensions that change fonts */
- /* font-family: 'weijinsuo' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  /*-webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}*/
-
-/*.icon-icon {
-  color: #E9232C;
-  display: inline-block;
-  font-size: 50px;
-  line-height: 50px;
-  vertical-align: middle;
-}
-
-.icon-icon::before {
-  content: "\e920";
-}
-
-.icon-logo {
-  color: #434243;
-  display: inline-block;
-  font-size: 36px;
-  line-height: 50px;
-  vertical-align: middle;
-}
-
-.icon-logo::before {
-  content: "\e93e";
-}
-
-.icon-mobilephone:before {
-  content: "\e908";
-  font-size: 13px;
-}
-
-.icon-telephone:before {
-  content: "\e909";
-  font-size: 15px;
-}
-
-.icon-uniE900:before {
-  content: "\e900";
-}
-
-.icon-uniE901:before {
-  content: "\e901";
-}
-
-.icon-uniE902:before {
-  content: "\e902";
-}
-
-.icon-uniE903:before {
-  content: "\e903";
-}
-
-.icon-uniE904:before {
-  content: "\e904";
-}
-
-.icon-uniE905:before {
-  content: "\e905";
-}
-
-.icon-uniE906:before {
-  content: "\e906";
-}
-
-.icon-uniE907:before {
-  content: "\e907";
-}
-
-.icon-news01:before {
-  content: "\e90e";
-  font-size: 28px;
-  color: #EAEAEA;
-}
-
-.icon-news02:before {
-  content: "\e90f";
-  font-size: 28px;
-  color: #EAEAEA;
-}
-
-.icon-news03:before {
-  content: "\e910";
-  font-size: 28px;
-  color: #EAEAEA;
-}
-
-.icon-news04:before {
-  content: "\e911";
-  font-size: 28px;
-  color: #EAEAEA;
-}*/
 
 /**
  * 通栏样式
@@ -712,8 +595,33 @@ i {
  */
 
 #huikuan .tit{
-  font-size: 16px;
+  font-size: 20px;
   color:#3a9775;
+  margin-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #3a9775;
+}
+
+#huikuan i {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+#huikuan strong{
+  font-weight: normal;
+  color: #E8430F;
+}
+
+#huikuan li {
+  height: 30px;
+  line-height: 30px;
+}
+
+#huikuan ul {
+  padding-top: 20px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  border-top: none;
 }
 /**
  * 新闻板块
@@ -798,28 +706,14 @@ i {
   padding: 50px 0;
 }
 
-.partner-list {
+.partner-list li{
+  width: 130px;
+  height: 50px;
+  background-image: url(../images/hzlogo_08.jpg);
+  background-size: contain;
+  float: left;
   list-style: none;
   padding: 0;
   font-size: 0;
 }
 
-.partner-list > li {
-  display: inline-block;
-  width: calc(100% / 9);
-  font-size: 50px;
-  line-height: 1;
-}
-
-.partner-list > li + li {
-  border-left: 1px dashed #c0c0c0;
-  color: #ddd;
-}
-
-.partner-list > li > a {
-  color: #999;
-}
-
-.partner-list > li > a:hover {
-  text-decoration: none;
-}
