--- a/css/xyc.css
+++ b/css/xyc.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2015-12-05 21:48:40
 * @Last Modified by:   流年
-* @Last Modified time: 2016-03-30 02:05:41
+* @Last Modified time: 2016-03-30 20:42:05
 */
 
 body {
@@ -24,17 +24,12 @@ body {
 }
 
 .navbar-lm .navbar-brand {
-  height: 82px;
+  height: 60px;
   padding: 10px 15px;
 }
 .navbar-lm .navbar-brand img{
-  margin: -12px 60px 0 20px;
+  margin: -19px 0 0 0;
 }
-/*.navbar-lm .navbar-brand:hover,
-.navbar-lm .navbar-brand:focus {
-  color: #5e5e5e;
-  /*background-color: transparent;*/
-}*/
 
 .navbar-lm .navbar-text {
   color: #777;
@@ -289,6 +284,14 @@ fieldset[disabled] .btn-register.active {
 .topbar .row > div + div {
   /*border-left: 1px solid #e0e0e0;*/
 }
+/*
+.navbar-header .navbar-brand {
+  display: inline-block;
+  height: 82px;
+  background: url(../images/xlogo_new.jpg) no-repeat;
+  background-size: contain;
+  width: 100%;
+}*/
 
 
 /**
