--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -87,7 +87,39 @@ a {
 .fr {
   float: right;
 }
+/*skip */
+#skip {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 1001;
+  background: url(../images/misk.jpg) center 0;
+}
 
+.mifan {
+  position: absolute;
+  top: 0;
+  left: 75px;
+}
+.mifans {
+  position: absolute;
+  top: 150px;
+  left: 270px;
+}
+#demos {
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  color: #FF6C02;
+  font: 500 20px "simSun";
+  cursor: pointer;
+}
+#demos:hover {
+  color: #f40;
+  text-decoration: underline;
+}
 /* music S*/
 #music nav{
       width: 40px;
@@ -400,6 +432,7 @@ a {
   margin-top: 20px;
       height: 260px;
       overflow: hidden;
+  position: relative;
     }
 
 #misfq ul {
@@ -456,6 +489,8 @@ a {
 }
 #misfq .a7{
     background: url(../images/misfq7.jpg) no-repeat center;
+  position: absolute;
+  right: 0;
 }
 #misfq  ul:hover li {
       width: 137px;
@@ -468,6 +503,108 @@ a {
 #misfq ul li:hover .title {
       display: none;
     }
+
+/*明星单品*/
+
+#mistar {
+  margin-top: 20px;
+  position: relative;
+  overflow: hidden;
+}
+#mistar h2{
+  font-size: 22px;
+  font-weight: 200;
+  line-height: 58px;
+  color: #333;
+  padding-right: 70px;
+}
+#mistar .control{
+  position: absolute;
+  top: 16px;
+  right: 0px;
+  width: 70px;
+  height: 23px;
+  line-height: 23px;
+  text-align: center;
+}
+#mistar .control span{
+  font: 900 18px/23px "simSun";
+  color: #B0B0B2;
+  border: 1px solid #ccc;
+  display: inline-block;
+  width: 32px;
+  height: 23px;
+  float: left;
+  cursor: pointer;
+}
+#mistar .control span:first-child{
+  border-right: none;
+}
+#mistar .starslider{
+  width: 200%;
+  height: 340px;
+  position: relative;
+  left: 0;
+  animation: starauto 6s infinite ;
+}
+@keyframes starauto {
+  0%{
+     left: 0;
+  }
+  10%{
+    left: -1226px;
+  }
+  90%{
+    left: -1226px;
+  }
+  100%{
+    left: 0;
+  }
+}
+#mistar .select {
+  width: 194px;
+  height: 300px;
+  padding: 20px;
+  text-align: center;
+  float: left;
+  margin: 5px;
+}
+#mistar .select:nth-child(1),
+#mistar .select:nth-child(6){
+  border-top: 1px solid #ffac13;
+}
+
+#mistar .select:nth-child(2),
+#mistar .select:nth-child(7){
+  border-top: 1px solid #83c44e;
+}
+
+#mistar .select:nth-child(3),
+#mistar .select:nth-child(8){
+  border-top: 1px solid #2196f3;
+}
+
+#mistar .select:nth-child(4),
+#mistar .select:nth-child(9){
+  border-top: 1px solid #e53935;
+}
+
+#mistar .select:nth-child(5),
+#mistar .select:nth-child(10){
+  border-top: 1px solid #00c0a5;
+}
+#mistar .star img{
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+#mistar .star .instruction{
+  font-size: 12px;
+  color: #b0b0b0;
+}
+#mistar .star .price {
+  margin-top: 16px;
+  color: #ff6709;
+}
 /* main E*/
 
 
