--- a/css/my.css
+++ b/css/my.css
@@ -1,44 +1,141 @@
 @charset "UTF-8";
 /*初始化  reset*/
-blockquote,body,button,dd,dl,dt,fieldset,form,h1,h2,h3,h4,h5,h6,hr,input,legend,li,ol,p,pre,td,textarea,th,ul{margin:0;padding:0}
-body,button,input,select,textarea{font:12px/1.5 "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;color: #666;}
-ol,ul{list-style:none}
-a{text-decoration:none}
-fieldset,img{border:0;vertical-align:top;}
-a,input,button,select,textarea{outline:none;}
-a,button{cursor:pointer;}
+blockquote, body, button, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, hr, input, legend, li, ol, p, pre, td, textarea, th, ul {
+  margin: 0;
+  padding: 0
+}
 
-.wrap{
-    width:1200px;
-    margin:10px auto;
+body, button, input, select, textarea {
+  font: 12px/1.5 "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
+  color: #666;
 }
-.slide {
-    height:500px;
-    position: relative;
+
+ol, ul {
+  list-style: none
 }
-.slide li{
-    position: absolute;
-    left:200px;
-    top:0;
+
+a {
+  text-decoration: none
 }
-.slide li img{
-    width:100%;
+
+fieldset, img {
+  border: 0;
+  vertical-align: top;
 }
-.arrow{
+
+a, input, button, select, textarea {
+  outline: none;
+}
+
+a, button {
+  cursor: pointer;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+}
+/*弹出层*/
+#layer {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding-bottom: 20px;
+  height: 100%;
+  background: rgba(33, 150, 343, 0.5);
+}
+
+#mclose {
+  width: 64px;
+  height: 64px;
+  background-image: url(../images/myclose.png);
+  position: absolute;
+  top: -63px;
+  right: 0px;
+  border-radius: 6px;
+}
+
+#mcanvas {
+  position: relative;
+  width: 800px;
+  height: 500px;
+  animation: jump 1s ease;
+  border-radius: 8px;
+  display: inline-block;
+  background: #fff;
+  margin: 110px 275px; /*position: relative;*/
+}
+
+@keyframes jump {
+  0% {
     opacity: 0;
+    transform: translateY(-3000px);
+    -webkit-transform: translateY(-3000px);
+  }
+  65% {
+    opacity: 1;
+    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+  }
+  75% {
+    transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+  }
+  90% {
+    transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+    -webkit-transform: none;
+  }
 }
-.prev,.next{
-    width:76px;
-    height:112px;
-    position: absolute;
-    top:50%;
-    margin-top:-56px;
-    background: url(../images/prev.png) no-repeat;
-    z-index: 99;
+
+#layer img {
+  display: inline-block;
+  position: absolute;
 }
-.next{
-    right:0;
-    background-image: url(../images/next.png);
+
+.wrap {
+  width: 1200px;
+  margin: 10px auto;
+}
+
+.slide {
+  height: 500px;
+  position: relative;
+}
+
+.slide li {
+  position: absolute;
+  left: 200px;
+  top: 0;
+}
+
+.slide li img {
+  width: 100%;
+}
+
+.arrow {
+  opacity: 0;
+}
+
+.prev, .next {
+  width: 76px;
+  height: 112px;
+  position: absolute;
+  top: 50%;
+  margin-top: -56px;
+  background: url(../images/prev.png) no-repeat;
+  z-index: 99;
+}
+
+.next {
+  right: 0;
+  background-image: url(../images/next.png);
 }
 
 
