--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -126,14 +126,12 @@ a {
       height:35px;
       position: fixed;
       top: 200px;
-      right: 0px;
+      left: 0px;
       z-index: 90;
   }
 #music nav li{
       width: 40px;
       height:35px;
-      border-right:1px dashed #00E3E3;
-      border-bottom:1px dashed #00DB00;
       font: 600 16px/35px "simSun";
       text-align: center;
       cursor: pointer;
@@ -145,8 +143,8 @@ a {
       left:0px;
       width:100%;
       height:100%;
-      background-color: pink;
-      z-index: -1;
+      z-index: 111;
+  background-repeat: no-repeat;
   }
 /* music S*/
 
@@ -288,7 +286,7 @@ a {
   border-top: 1px solid #ccc;
   position: absolute;
   left: -120px;
-  z-index: 999;
+  z-index: 100;
 }
 
 /* header E*/
@@ -422,10 +420,11 @@ a {
 
 /* main S*/
 
+/*手风琴*/
 #misfq li {
       list-style: none;
       cursor: pointer;
-      transition: all 0.5s;
+      transition: all 0.3s;
     }
 
 #misfq {
@@ -437,6 +436,7 @@ a {
 
 #misfq ul {
       height: 260px;
+  position: relative;
     }
 
 #misfq li {
@@ -482,15 +482,13 @@ a {
     background: url(../images/misfq4.jpg) no-repeat center;
 }
 #misfq .a5{
-    background: url(../images/misfq5.jpg) no-repeat center;
+    background: url(../images/misfq7.jpg) no-repeat center;
 }
 #misfq .a6{
     background: url(../images/misfq6.jpg) no-repeat center;
 }
 #misfq .a7{
-    background: url(../images/misfq7.jpg) no-repeat center;
-  position: absolute;
-  right: 0;
+    background: url(../images/misfq5.jpg) no-repeat center;
 }
 #misfq  ul:hover li {
       width: 137px;
@@ -503,15 +501,16 @@ a {
 #misfq ul li:hover .title {
       display: none;
     }
-
 /*明星单品*/
-
+#main {
+  background-color: #f5f5f5;
+}
 #mistar {
   margin-top: 20px;
   position: relative;
   overflow: hidden;
 }
-#mistar h2{
+#main h2{
   font-size: 22px;
   font-weight: 200;
   line-height: 58px;
@@ -540,72 +539,175 @@ a {
 #mistar .control span:first-child{
   border-right: none;
 }
-#mistar .starslider{
+#mistar .starpro{
   width: 200%;
   height: 340px;
   position: relative;
   left: 0;
-  animation: starauto 6s infinite ;
 }
-@keyframes starauto {
-  0%{
-     left: 0;
-  }
-  10%{
-    left: -1226px;
-  }
-  90%{
-    left: -1226px;
-  }
-  100%{
-    left: 0;
-  }
-}
-#mistar .select {
+#main .product {
+  cursor: pointer;
   width: 194px;
-  height: 300px;
+  height: 259px;
   padding: 20px;
   text-align: center;
   float: left;
   margin: 5px;
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
 }
-#mistar .select:nth-child(1),
-#mistar .select:nth-child(6){
+#mistar .product:nth-child(1),
+#mistar .product:nth-child(6){
   border-top: 1px solid #ffac13;
 }
 
-#mistar .select:nth-child(2),
-#mistar .select:nth-child(7){
+#mistar .product:nth-child(2),
+#mistar .product:nth-child(7){
   border-top: 1px solid #83c44e;
 }
 
-#mistar .select:nth-child(3),
-#mistar .select:nth-child(8){
+#mistar .product:nth-child(3),
+#mistar .product:nth-child(8){
   border-top: 1px solid #2196f3;
 }
 
-#mistar .select:nth-child(4),
-#mistar .select:nth-child(9){
+#mistar .product:nth-child(4),
+#mistar .product:nth-child(9){
   border-top: 1px solid #e53935;
 }
 
-#mistar .select:nth-child(5),
-#mistar .select:nth-child(10){
+#mistar .product:nth-child(5),
+#mistar .product:nth-child(10){
   border-top: 1px solid #00c0a5;
 }
-#mistar .star img{
-  margin-top: 10px;
-  margin-bottom: 30px;
+#main .ad {
+  width: 64px;
+  height: 20px;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 85px;
 }
-#mistar .star .instruction{
+#power .product:nth-child(2n+1) .ad{
+  background-color: #83c44e;
+}
+#power .product:nth-child(2n) .ad{
+  background-color: #2196f3;
+}
+#main .product .instruction{
   font-size: 12px;
   color: #b0b0b0;
 }
-#mistar .star .price {
+#main .product .price {
   margin-top: 16px;
   color: #ff6709;
 }
-/* main E*/
+
+/*智能硬件*/
+#power {
+  position: relative;
+  height: 696px;
+}
+#power .air{
+  float: left;
+  width: 234px;
+  margin-right: 10px;
+}
+#power .current:hover {
+  -webkit-box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+  -webkit-transform: translate3d(0, -2px, 0);
+  transform: translate3d(0, -3px, 0);
+  -webkit-transition: all .2s linear;
+  transition: all .3s linear;
+}
+
+/*配件*/
+#pei {
+  position: relative;
+  height: 696px;
+}
+#pei .yidong{
+  width: 234px;
+  margin-bottom: 13px;
+}
+#pei h2{
+  width: 234px;
+}
+#pei .xingli{
+  width: 234px;
+}
+#pei .tab{
+  position: absolute;
+  top: 18px;
+  right: 8px;
+  height: 20px;
+}
+
+#pei .tab li{
+  float: left;
+  font-size: 16px;
+  margin-left: 25px;
+  border-bottom: 2px solid transparent;
+  cursor: pointer;
+}
+#pei .tab .show {
+  border-bottom: 2px solid #ff6700;
+}
+#pei .peipro {
+  position: absolute;
+  top: 57px;
+  right: -8px;
+  width: 990px;
+}
+#pei .peipro .lis {
+ display: none;
+}
+#pei .peipro .show{
+  display: block;
+}
+
+/*#pei .product .bot{*/
+  /*position: absolute;*/
+  /*bottom: -80px;*/
+  /*left: 0;*/
+  /*width: 234px;*/
+  /*height: 80px;*/
+  /*background-color: #ff6700;*/
+  /*transition: all .5s;*/
+/*}*/
+#pei .bot {
+  display: none;
+}
+#pei .bot p {
+color: rgba(255,255,255,0.6);
+}
+#pei .peipro .product:nth-child(1) .bot,
+#pei .peipro .product:nth-child(3) .bot,
+#pei .peipro .product:nth-child(4) .bot,
+#pei .peipro .product:nth-child(5) .bot,
+#pei .peipro .product:nth-child(8) .bot{
+  text-align: center;
+  color: #fff;
+  display: block;
+  padding: 20px;
+  position: absolute;
+  bottom: -80px;
+  left: 0;
+  width: 194px;
+  height: 40px;
+  background-color: #ff6700;
+  transition: all .5s;
+}
+#pei .peipro .product:nth-child(1):hover .bot,
+#pei .peipro .product:nth-child(3):hover .bot,
+#pei .peipro .product:nth-child(4):hover .bot,
+#pei .peipro .product:nth-child(5):hover .bot,
+#pei .peipro .product:nth-child(8):hover .bot{
+  bottom: 0;
+}
+/*main E*/
 
 
 
